welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:34: error: Unmatched closing brace '}' ignored here
}
^