welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {

def dessiner()
{	baisseBrosse()
	leveBrosse()	}

def faireV()
	avance()
	dessiner()
	avance()
	gauche()
	avance()
	dessiner()
	recule()
	droite()
	avance()
	dessiner()
	avance()
	gauche()










}
}